# rust-graphql-template

./: Cargo.toml  README.md
crates/rust-graphql-template-core/: Cargo.toml
crates/rust-graphql-template-core/src/: error.rs
crates/rust-graphql-template-gateway/: Cargo.toml
crates/rust-graphql-template-gateway/src/: auth.rs  context.rs  error.rs  main.rs
crates/rust-graphql-template-gateway/src/schema/: doodad.rs  mod.rs  mutation_root.rs  query_root.rs
