[package]
name = "rust-graphql-template-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
async-graphql = { version = "7.0.0", features = ["chrono"] }
async-graphql-actix-web = "7.0.0"
chrono = "0.4.31"
const_format = "0.2.32"
rust-graphql-template-core = { path = "../rust-graphql-template-core" }
dotenvy = "0.15.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
